# feodorov-uprkach-lab2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  docker-image.yml
services/: CMakeLists.txt
services/simplepg/: CMakeLists.txt  simplepg.c
services/simplepg/include/: simplepg.h
services/var1/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev
services/var1/httpd/: httpd.conf
services/var1/httpd/public-html/: index.html  package-lock.json  package.json
services/var1/httpd/public-html/cgi-bin/: list.cgi
services/var1/httpd/public-html/src/: App.js  Clients.jsx  Rents.jsx  Rooms.jsx  Root.jsx  index.css
services/var1/httpd/public-html/src/admin/: Admin.jsx
services/var1/httpd/public-html/src/client/: Client.jsx
services/var1/httpd/public-html/src/client/Data/: Data.jsx  Form.jsx  Grid.jsx
services/var1/src/: add.c  common.c  common.h  del.c  init.c  load.c  search.c  search.json
services/var1/src/db/: CMakeLists.txt  psql.c
services/var1/src/db/include/: psql.h
services/var2/: CMakeLists.txt
services/var2/httpd/public-html/: package-lock.json  package.json
services/var2/httpd/public-html/src/: Admin.jsx  Client.jsx  Content.jsx  Data.jsx  Form.jsx  Header.jsx  Manage.jsx  Menu.jsx  Root.jsx  Table.jsx  index.css
services/var2/src/: data.json  find.c  init.c  main.c  save.c  search.c
